k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lofersil-github-issues-reviewer
  labels:
    app: lofersil-github-issues-reviewer
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: lofersil-github-issues-reviewer
